--- a/mana-movement.html
+++ b/mana-movement.html
@@ -170,28 +170,13 @@ faq:
   questions-and-answers:
     - question: I have a busy schedule. Can I take my time working through each module?
       answer_html: >-
-        <p>YES! Wisdom Body is designed to serve YOU in living in your radiance.
-        Therefore the practices have been designed to give you the freedom of
-        when, and how often you practice. That being said here is the
-        recommendation from Mana Mei.</p><p>For first time, it is recommended to
-        complete ONE module per week, spacing the 3 practices out as you desire.
-        The practices are meant to do IN ORDER, as the 3rd practice incorporates
-        practice 1 & 2.</p><p>As you have lifetime access, once you have
-        completed all 4 modules, you will have the knowledge and freedom to
-        revisit specific practices, choosing which will serve you best on any
-        particular day.</p><p>These practices are meant to be done MORE THAN
-        ONCE. And the more you do them, the deeper you will be able to go.
-        Through the practices, you are retraining your ability to stay present,
-        to access more freedom, and to evoke new feelings.</p>
+        <p>YES! There is no strict timeline for this program, and upon purchase, you gain lifetime access to the material.</p>
     - question: Are there prerequisites to take this program?
       answer_html: >-
         <p>NO. This program is open to any woman who is excited and ready to
         dive into the movement medicine, regardless of your previous experience.
         All women can benefit from this program, regardless of your age,
-        physical capacity, dance experience, or location in the world.</p><p>In
-        the case that you are still worried that you do not have enough
-        experience for this program, Mana Mei recommends starting with the MANA
-        Movement Program as a solid starting foundation.</p>
+        physical capacity, dance experience, or location in the world.</p>
     - question: What is the difference between Wisdom Body and MANA Movement?
       answer_html: >-
         <p>MANA Movement is a guided practice which flows through sequences of
@@ -203,15 +188,16 @@ faq:
         freedom.</p><p>Wisdom Body will offer you the next level of freedom in
         that there is no specific guided movements, but rather invitations for
         you to discover your unique movement style through intentional prompts,
-        imagery, and somatic cues.</p><p>Wisdom Body is perfect for any woman
+        imagery, and somatic cues.</p><p class="mb-4">Wisdom Body is perfect for any woman
         ready to deepen her movement practice and gain new inspiration for
-        increased freedom.</p>
+        increased freedom.</p><div class=”youtube-container”>
+          <div class='embed-container'><iframe src='https://www.youtube.com/embed/HIMIB96xwTY?si=zwu_oWHoCsTHYk1r frameborder='0' allowfullscreen></iframe></div></div>
     - question: Will I receive a certificate at the end?
       answer_html: >-
-        <p>Wisdom Body is purely a personal deep dive experience so there is no
+        <p>Mana Movement is purely a personal deep dive experience so there is no
         certification at completion. If you are interested in Mana Mei’s Level 1
-        Leadership and Facilitator Training, check out the Liberation Through
-        Movement Mentorship Program!</p>
+        Leadership and Facilitator Training, check out the <a class="hyperlink" href="/liberation-through-movement-mentorship.html">Liberation Through
+        Movement Mentorship</a> Program!</p>
     - question: I don’t have a credit card. Is there any other way I can pay?
       answer_html: >-
         <p>Yes! We accept PayPal and Bank Transfers. Please contact Mana Mei to
