--- a/mana-movement.html
+++ b/mana-movement.html
@@ -14,9 +14,10 @@ heading:
     text: Enroll now
     url: https://sso.teachable.com/secure/487916/checkout/3804105/mana-movement
   button-video:
-    show: false
+    show: true
+    type: youtube
     text: Watch the video
-    url: 
+    url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
   background_image: /uploads/images/manamei-30.jpg
   overlay_style: medium
 course-description:
