--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ start-here:
     - benefit: Increase mobility, flexibility, and fluidity.
     - benefit: Activate your innate creativity, inspiration, and power.
   button:
-    text: Enroll now
-    url: https://sso.teachable.com/secure/487916/checkout/3804105/mana-movement
+    text: Learn More
+    url: /mana-movement-foundations.html
   video_url: https://www.youtube.com/embed/5sEVM981_X0?si=ZQjVEKlLQNLUTPLR
   background_image: uploads/backgrounds/manamei-1.png
 testimonials:
