--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -12,9 +12,10 @@ heading:
     text: Join the waitlist
     url:
   button-video:
-    show: false
+    show: true
+    type: youtube
     text: Watch the video
-    url:
+    url: https://www.youtube.com/embed/qFvP0ardNRA?si=KMFcYLRBB_Ee3Ex0
   background_image: /uploads/images/manamei-24.jpg
   overlay_style: medium
 brochure-1: 
