--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -12,10 +12,10 @@ heading:
   description: A powerful introductory course to the life-changing MANA Movement Practice
   button-enroll:
     text: Enroll now
-    url: >-
-      https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
   button-video:
-    show: false
+    show: true
+    type: youtube
     text: Watch the video
     type: youtube
     url: https://www.youtube.com/embed/5sEVM981_X0?si=o8-6Hc6L1vNcaW2e
@@ -31,9 +31,6 @@ banner:
   - image_path: /uploads/icons/manamei-21.png
     title: Spirit
     benefit: 'Awaken Your Spirit and Activate your Creativity '
-video:
-  show: true
-  url: https://youtu.be/5sEVM981_X0?
 course-description:
   heading: Discover the essence of Mana Movement Foundations
   description_html: >-
