finished until Mana's edits

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -10,7 +10,7 @@ heading:
   description_html: Short description here.
   button-enroll:
     text: Join the waitlist
-    url:
+    url: /mentorship-waitlist.html
   button-video:
     show: true
     type: youtube
@@ -117,7 +117,7 @@ investment:
       heading: Payment plan
       price: $800 x 4 months
   button: 
-    url: 
+    url: /mentorship-waitlist.html
     text: Join the waitlist
   border: 
 faq:
@@ -179,7 +179,7 @@ cta:
   description_html: <p>Ready to take the next step?</p><p>First, fill out the application included in the email you received. Then, book a 45 minute connection call with Mana Mei (you will be invited to do so once your application has been submitted).</p>
   button:
     text: Join the waitlist
-    url:
+    url: /mentorship-waitlist.html
   background-image:
     background_image: /uploads/images/manamei-22.jpg
     background-position: center
