--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -5,7 +5,7 @@ title: Mana Movement Foundations
 description_html: >-
   <p>Mana Movement Foundations is a powerful introductory course to the
   life-changing MANA Movement Practice.</p>
-featured-image: /uploads/images/manamei-27.jpg
+featured-image: /uploads/images/manamei-49.jpg
 heading:
   title: MANA Movement Foundations
   subtitle: Realign with the Natural Feminine Way
@@ -19,7 +19,7 @@ heading:
     text: Watch the video
     type: youtube
     url: https://www.youtube.com/embed/5sEVM981_X0?si=o8-6Hc6L1vNcaW2e
-  background_image: /uploads/images/manamei-27.jpg
+  background_image: /uploads/images/manamei-49.jpg
   overlay_style: medium
 banner:
   - image_path: /uploads/icons/manamei-19.png
@@ -55,8 +55,8 @@ course-description:
     move through life and the way you meet life in every single
     moment.&nbsp;</p>
   background-image: 
-    background_image: /uploads/images/manamei-29.jpg
-    image_focus: 
+    background_image: /uploads/images/manamei-48.jpg
+    image_focus: 67% 50%
     overlay_style: dark
 benefits:
   heading: By practicing Mana Movement, you will
@@ -90,8 +90,8 @@ who-its-for:
     of holistic healing: mindfulness meditation, physical body activation,
     spiritual liberation.</li></ul>
   background-image:
-    background_image: /uploads/images/manamei-21.jpg
-    image_focus: center
+    background_image: /uploads/images/manamei-50.jpg
+    image_focus: 64% 50%
   overlay_style: medium
 inside-the-course:
   heading: Inside Mana Movement Foundations
@@ -143,7 +143,7 @@ inside-the-course:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials:
-  background_image: /uploads/images/manamei-20.jpg
+  background_image: /uploads/images/manamei-52.jpg
   overlay_style: medium
   testimonials:
     - testimonial: ”I love it!! I've been searching for this movement my whole life.”
@@ -227,7 +227,7 @@ cta:
     url: >-
       https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
   background-image:
-    background_image: /uploads/images/manamei-44.jpg
+    background_image: /uploads/images/manamei-51.jpg
     background-position: center
     overlay_style: medium
 seo:
