--- a/mana-movement.html
+++ b/mana-movement.html
@@ -18,7 +18,7 @@ heading:
     type: youtube
     text: Watch the video
     url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
-  background_image: /uploads/images/manamei-30.jpg
+  background_image: /uploads/images/manamei-53.jpg
   overlay_style: medium
 course-description:
   heading: Discover the essence of Mana Movement
@@ -29,9 +29,9 @@ who-its-for:
   description_html: >-
     <p>MANA Movement is a course designed to suit all women, no matter what your experience or skill level with other movement practices is.</p><p>In fact, this course has been designed for any woman who is ready to awaken more of their feminine expression.</p><p>Who is ready to feel more expansive, radiant, passionate, and in love with themselves and their life!</p>
   background-image:
-    background_image: /uploads/images/manamei-19.jpg
+    background_image: /uploads/images/manamei-54.jpg
     image_focus: center
-  overlay_style: medium
+  overlay_style: dark
 inside-the-course:
   heading: Inside Mana Movement
   description_html: >-
@@ -111,8 +111,8 @@ inside-the-course:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials:
-  background_image: /uploads/images/manamei-11.jpg
-  overlay_style: light
+  background_image: /uploads/images/manamei-55.jpg
+  overlay_style: dark
   testimonials:
     - testimonial: ”I love it!! I've been searching for this movement my whole life.”
       author:
@@ -215,9 +215,9 @@ cta:
     url: >-
       https://manamei.teachable.com/p/mana-movement-sales
   background-image:
-    background_image: /uploads/images/manamei-36.jpg
+    background_image: /uploads/images/manamei-56.jpg
     background-position: center
-    overlay_style: medium
+    overlay_style: dark
 seo:
   title: Mana Movement Foundations
   description:
