--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -29,9 +29,9 @@ course-description:
   heading: Discover the essence of the LTM Mentorship
   description_html: <p>The Liberation Through Movement Mentorship Program is a carefully crafted process by Mana Mei developed over three decades. Rooted in classical dance techniques, somatic movement, and free expressive dance, this program focuses on harmonizing Feminine and Masculine energies within. Throughout the journey, you'll explore and cultivate awareness in your physical, emotional, and transpersonal bodies, gaining tools to maintain peace, express your authentic self, and step into leadership.</p><p>It is based on the process that I have personally gone through in my own life, and continue to use on a daily basis to reach and sustain the expanded state of liberated expression that I embody today.</p><p>Whatever meaningful changes and transformations you are desiring to achieve right now, I am here to support you every step of the way by creating a safe space for you to recollect and liberate all parts of yourself and rise into empowered self expression.</p>
   background-image: 
-    background_image: /uploads/images/manamei-9.jpg
+    background_image: /uploads/images/manamei-61.jpg
     image_focus: 
-    overlay_style: dark
+    overlay_style: medium
 benefits:
   heading: By joining the Mentorship, you will
   description_html: <ul><li>Cultivate awareness & freedom in your physical body.</li><li>Source power from your energy body.</li><li>Maintain peace amidst life's challenges.</li><li>Awaken courage & strength for authentic expression.</li><li>Rise into leadership & create a satisfying, pleasure-filled life.</li><li>Learn to hold space authentically</li></ul>
@@ -43,9 +43,9 @@ who-its-for:
   heading: Who the LTM Mentorship is for
   description_html: This program is for women who seek meaningful changes and transformations, desiring to reclaim freedom in their bodies and express their raw nature while anchoring themselves in stability and direction. If you're drawn to a balanced approach that honors both the Feminine and Masculine, this mentorship is crafted for you.
   background-image:
-    background_image: /uploads/images/manamei-5.jpg
+    background_image: /uploads/images/manamei-62.jpg
     image_focus: center
-    overlay_style: light
+    overlay_style: medium
 inside-the-course:
   heading: Inside the LTM Mentorship
   description_html: The 4-month program follows the Liberation Through Movement Model, with each month dedicated to one of the 3 Pillars of Connection, culminating in Authentic Space Holding and LTM Facilitation Training. The journey is a deep exploration of your inner world, combining daily practices, weekly transmissions, and monthly mentoring calls.
@@ -78,8 +78,8 @@ inside-the-course:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials:
-  background_image: /uploads/images/manamei-2.jpg
-  overlay_style: light
+  background_image: /uploads/images/manamei-63.jpg
+  overlay_style: medium
   testimonials:
     - testimonial: I am so grateful, so so grateful for you, Mana, for creating this space and the way you are holding it and the way you have created the program. Taking the decision to do this mentorship has been one of the best things I have ever done. Im coming from a place where I was not confident with myself and what I do. I would always question myself with what I say. I would always compare myself to others, because I didn’t like me. I thought I’m not enough. I’m not doing enough, I’m not good enough, I don’t have anything to offer… I wanted to be like someone else…<br class="mb-4">And with this mentorship I really got the chance to get to know myself, and I like what I found. The ability to show up with confidence. And really being confident in believing in myself and my medicine and what I have to offer. I definitely feel more open to show myself in a more authentic way.
       author: — LTM Mentorship participant, Rodi Sarivan
@@ -181,8 +181,8 @@ cta:
     text: Join the waitlist
     url: /mentorship-waitlist.html
   background-image:
-    background_image: /uploads/images/manamei-22.jpg
-    background-position: center
+    background_image: /uploads/images/manamei-64.jpg
+    background-position: bottom
     overlay_style: medium
 brochure-2: 
   heading: Still have questions?
