--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header:
   logo: /uploads/icons/manamei-11.png
   title: Mana Mei
   subtitle: Liberation Through Movement Founder
-  subtitle-2: International Feminine Embodiedment Movement Leader
+  subtitle-2: International Feminine Embodiment Leader
   overlay_style: dark
 banner-1:
   text_html: >-
