--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -44,7 +44,7 @@ who-its-for:
   description_html: This program is for women who seek meaningful changes and transformations, desiring to reclaim freedom in their bodies and express their raw nature while anchoring themselves in stability and direction. If you're drawn to a balanced approach that honors both the Feminine and Masculine, this mentorship is crafted for you.
   background-image:
     background_image: /uploads/images/manamei-62.jpg
-    image_focus: center
+    image_focus: left
     overlay_style: medium
 inside-the-course:
   heading: Inside the LTM Mentorship
