--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -25,7 +25,7 @@ heading:
     show: true
     text: Watch the video
     url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101442/manamei/ltm_wesx93.mp4
-  background_image: /uploads/images/manamei-15.jpg
+  background_image: /uploads/images/manamei-59.jpg
   overlay_style: medium
 banner:
   - image_path: /uploads/icons/manamei-19.png
@@ -55,9 +55,9 @@ who-its-for:
   description_html: >-
     <p>Liberation Through Movement is designed for women seeking a global community and shared passion. It welcomes those desiring to align with their true nature, joy, and peace through creativity and pleasure. This course is for individuals looking to explore feminine expressions and find support in a community of like-minded women.</p>
   background-image:
-    background_image: /uploads/images/manamei-10.jpg
+    background_image: /uploads/images/manamei-58.jpg
     image_focus: center
-  overlay_style: medium
+    overlay_style: dark
 testimonials:
   background_image: /uploads/backgrounds/manamei-4.jpg
   testimonials:
