--- a/mentorship-waitlist.html
+++ b/mentorship-waitlist.html
@@ -5,8 +5,8 @@ cta:
   heading_html: Be First to Know When Mentorship Applications Reopen
   subtitle: This program offers a unique blend of classical dance, somatic movement, and expressive dance techniques, tailored to enhance your personal growth, self-expression, and inner balance. By joining our waitlist, you'll be among the first to know when we welcome new applicants. Dive into a practice that nurtures your self-love, sensuality, and authenticity. Be the first to experience the power of movement in unlocking your true potential.
   background:
-    background_image: /uploads/images/manamei-31.jpg
-    background_position: bottom
+    background_image: /uploads/images/manamei-60.jpg
+    background_position: 
     overlay_style: dark
 ---
 
