--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ about-ltm:
     life.</p><p><span class="text-sm-serif md:text-md-serif text-feature">Quiet
     your Mind. Activate your Body. Awaken your Spirit.</span></p>
   background_image: /uploads/images/manamei-60.jpg
-  overlay_style: light
+  overlay_style: dark
 banner-2:
   - image_path: /uploads/icons/manamei-1.png
   - image_path: /uploads/icons/manamei-2.png
