--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -202,8 +202,10 @@ seo:
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
 
-<!-- Brochure Download -->
-{% include cta-brochure-1.html %}
+<!-- Banner -->
+<section class="flex justify-around p-5p">
+  <img src="/uploads/icons/manamei-11.png" class="max-h-16">
+</section>
 
 <!-- Course Description -->
 {% include description-course.html %}
@@ -236,6 +238,3 @@ seo:
 
 <!-- CTA -->
 {% include cta-course.html %}
-
-<!-- Brochure Download -->
-{% include cta-brochure-2.html %}
