--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ about-ltm:
     safe container for you to step back into the driver's seat of your
     life.</p><p><span class="text-sm-serif md:text-md-serif text-feature">Quiet
     your Mind. Activate your Body. Awaken your Spirit.</span></p>
-  background_image: /uploads/images/manamei-60.jpg
-  overlay_style: dark
+  background_image: /uploads/images/manamei-3.jpg
+  overlay_style: light
 banner-2:
   - image_path: /uploads/icons/manamei-1.png
   - image_path: /uploads/icons/manamei-2.png
