--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -115,8 +115,8 @@ investment:
       show: false
       heading: Payment plan
       price: $180 x 12 months
-  background_image: /uploads/images/manamei-3.jpg
-  overlay_style: light
+  background_image: /uploads/images/manamei-60.jpg
+  overlay_style: dark
 cta:
   heading: Welcome home
   description_html: >-
