--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -40,7 +40,7 @@ benefits:
     image_focus: 
     overlay_style: 
 who-its-for:
-  heading: The Liberation Through Movement Mentorship Is For Women Who Are...
+  heading: The Liberation Through Movement Mentorship Is For Women Who Are
   description_html: Seeking meaningful changes and transformations in their every day life.</p><p>Desiring to reclaim freedom in their bodies and express themselves authentically.</p><p>Wanting to strengthen their inner anchor for more safety & security</p><p>Drawn to a balanced approach that honors both the Feminine and Masculine.</p><p>Looking for a daily practice that is a combination of Meditation, Physical Activation, and Spiritual Liberation.</p><p>Ready to step into Embodied Leadership and learn the tools necessary to facilitate this movement medicine.</p><p>Desiring to connect with other women in Sacred Sisterhood for support and inspiration.</p>
   background-image:
     background_image: /uploads/images/manamei-62.jpg
@@ -175,8 +175,8 @@ faq:
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta:
-  heading: Enrollment
-  description_html: <p>Ready to take the next step?</p><p>First, fill out the application included in the email you received. Then, book a 45 minute connection call with Mana Mei (you will be invited to do so once your application has been submitted).</p>
+  heading: Think this may be the perfect fit for you? 
+  description_html: The next step is to join the waitlist! By doing this, you will receive an email with the Mentorship Brochure containing all of the details you need. </p><p>By joining the waitlist, you will be the first to know when Enrollment opens for the next round.
   button:
     text: Join the waitlist
     url: /mentorship-waitlist.html
