--- a/about.html
+++ b/about.html
@@ -46,6 +46,12 @@ gallery:
  - image_path: /uploads/images/manamei-37.jpg
    seo-description:
    image_focus: 
+seo:
+  title: About Mana Mei
+  description:
+  keywords:
+  social_image:
+  hide-from-google: true
 ---
 
 <!-- About Mana Mei -->
