--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -40,7 +40,7 @@ benefits:
     image_focus: 
     overlay_style: 
 who-its-for:
-  heading: The Liberation Through Movement Mentorship Is For Women Who Are
+  heading: The Liberation Through Movement Mentorship is for women who are
   description_html: Seeking meaningful changes and transformations in their every day life.</p><p>Desiring to reclaim freedom in their bodies and express themselves authentically.</p><p>Wanting to strengthen their inner anchor for more safety & security</p><p>Drawn to a balanced approach that honors both the Feminine and Masculine.</p><p>Looking for a daily practice that is a combination of Meditation, Physical Activation, and Spiritual Liberation.</p><p>Ready to step into Embodied Leadership and learn the tools necessary to facilitate this movement medicine.</p><p>Desiring to connect with other women in Sacred Sisterhood for support and inspiration.</p>
   background-image:
     background_image: /uploads/images/manamei-62.jpg
@@ -193,7 +193,7 @@ brochure-2:
       overlay_style: 
   border: border-y border-feature
 seo:
-  title:
+  title: Liberation Through Movement Menotrship
   description:
   keywords:
   social_image:
