--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -18,7 +18,7 @@ heading:
     type: youtube
     text: Watch the video
     type: youtube
-    url: https://www.youtube.com/embed/5sEVM981_X0?si=o8-6Hc6L1vNcaW2e
+    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
   background_image: /uploads/images/manamei-49.jpg
   overlay_style: medium
 banner:
@@ -75,9 +75,9 @@ benefits:
     image_focus: 
     overlay_style: 
 who-its-for:
-  heading: Who Mana Movement Foundations is for
+  heading: Mana Movement Foundations is for women who are ready to
   description_html: >-
-    <p>This course is for anyone who is ready to:</p><ul class="list-none"><li>Unlock their full
+    <ul class="list-none"><li>Unlock their full
     creative potential by accessing the well of life force energy flowing
     within.</li><li>Realign with a life filled with inspiration, beauty,
     pleasure, and flow.</li><li>Establish an unwavering sense of peace and
@@ -224,8 +224,7 @@ cta:
     master creator of your life and realign with the life you desire.</p>
   button:
     text: Enroll now
-    url: >-
-      https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
   background-image:
     background_image: /uploads/images/manamei-51.jpg
     background-position: center
