--- a/mana-movement.html
+++ b/mana-movement.html
@@ -3,8 +3,8 @@ layout: default
 slug: mana-movement
 title: Mana Movement
 description_html: >-
-  <p>Mana Movement Foundations is a powerful introductory course to the
-  life-changing MANA Movement Practice.</p>
+  <p>Mana Movement is an initiation into the
+    Art of Feminine Embodiment.</p>
 featured-image: /uploads/images/manamei-27.jpg
 heading:
   title: MANA Ritual Movement
@@ -12,12 +12,12 @@ heading:
   description: Return to the feminine paths of movement
   button-enroll:
     text: Enroll now
-    url: https://sso.teachable.com/secure/487916/checkout/3804105/mana-movement
+    url: https://manamei.teachable.com/p/mana-movement-sales
   button-video:
     show: true
     type: youtube
     text: Watch the video
-    url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
+    url: https://manamei.teachable.com/p/mana-movement-sales
   background_image: /uploads/images/manamei-27.jpg
   overlay_style: medium
 course-description:
@@ -25,9 +25,8 @@ course-description:
   description_html: >-
     <p>For centuries, cultures around the world have used dance as a way to pray, celebrate, express, and connect. When the energy that naturally moves through the body is expressed through intentional movement, it has the capacity to reconnect us with our own Source energy and power of manifestation.</p><p>This is a practice that, in mainstream culture has been lost.</p><p>We have become disconnected from the wisdom that we each innately hold in our bodies. We have become disconnected from the knowledge of how to use dance to pray, call in, and manifest what we desire in life.</p><p>But just because we have drifted away from these practices does not mean they have been lost forever!</p><p>This knowledge still lives inside each of us, waiting to be reactivated and used for its purpose- to bring us into align with our highest expression of life.</p><p>Using movement as a ritual practice can be done by absolutely anyone. There is no skill required. The only element necessary is a willingness to open to the unseen realm of energy, and to prioritize creating time and space to be fully present with your self, your feeling body, and all of the vibrations flowing through you.</p><p>Once we learn to tap into the river of energy flowing inside, welcoming it in every form- from the most gentle drips to the 10 foot high crashing waves- then we can learn to harness this power, activate it, and direct it through the body in a way that supports us stepping more fully into our power.</p><p>We become the masters of our reality, knowing that what is outside is a direct reflection of that is happening on the inside.</p>
 who-its-for:
-  heading: Who Mana Movement Foundations is for
-  description_html: >-
-    <p>MANA Movement is a course designed to suit all women, no matter what your experience or skill level with other movement practices is.</p><p>In fact, this course has been designed for any woman who is ready to awaken more of their feminine expression.</p><p>Who is ready to feel more expansive, radiant, passionate, and in love with themselves and their life!</p>
+  heading: Mana Ritual Movement is for women who are ready to
+  description_html: Unlock their full creative potential by accessing the well of life force energy flowing within.</p><p>Realign with a life filled with inspiration, beauty, pleasure, and flow.</p><p>Establish an unwavering sense of peace and safety within, no matter what is happening in the world around.</p><p>Rise into their full embodied power and live a life of liberated personal expression.</p><p>Cultivate deeper self love, confidence, and worthiness.</p><p>Become more comfortable dancing and moving their body freely.</p><p>Gain more fluidity, mobility, and awareness of their body in motion.</p><p>Learn a modality of practice that covers all three aspects of holistic healing, mindfulness meditation, physical body activation, spiritual liberation.
   background-image:
     background_image: /uploads/images/manamei-54.jpg
     image_focus: center
@@ -219,7 +218,7 @@ cta:
     background-position: center
     overlay_style: dark
 seo:
-  title: Mana Movement Foundations
+  title: Mana Movement
   description:
   keywords:
   social_image:
