--- a/offerings.html
+++ b/offerings.html
@@ -43,6 +43,12 @@ cta:
     background_image: /uploads/images/manamei-65.jpg
     background_position: bottom
     overlay_style: dark
+seo:
+  title: Offerings
+  description:
+  keywords:
+  social_image:
+  hide-from-google: true
 ---
 
 <!-- Hero Banner -->
