--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -51,7 +51,7 @@ course-description:
     embodiment events & workshops curated by world class facilitators. You will connect with hundreds of women around the globe through these powerful shared experiences, and remember at every moment that you  are not alone. We
     are here for you, dancing beside you, celebrating you along your journey.</p><p>So are you ready to spread your wings?<br>Are you ready for your next evolution of embodied liberation?</p><p>THIS IS YOUR TRIBE, LADIES. <span class="text-sm-serif">Welcome Home.</span>
 who-its-for:
-  heading: Who the Liberation Through Movement is for
+  heading: Who is Liberation Through Movement for?
   description_html: >-
     <p>Liberation Through Movement is designed for women seeking a global community and shared passion. It welcomes those desiring to align with their true nature, joy, and peace through creativity and pleasure. This course is for individuals looking to explore feminine expressions and find support in a community of like-minded women.</p>
   background-image:
@@ -136,7 +136,7 @@ cta:
     background-position: center
     overlay_style: medium
 seo:
-  title:
+  title: Liberation Through Movement
   description:
   keywords:
   social_image:
