--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -45,8 +45,8 @@ course-description:
      title: Liberation
      description_html: <p>Explore, unlock, and celebrate ALL of your Feminine expressions.</p><p>Harness the power of all of your emotions and transmute this energy into movement for manifestation and creation.</p><p>Learn how to use movement as a prayer and devotional practice to yourself, weaving together your dreams with your reality.</p><p>Become the creatrix of your life and empower yourself to take inspired action, the feminine way, with fluidity and grace.</p>
 who-its-for: 
-  heading: Who the Wisdom Body Immersion is for
-  description_html: <p>Anyone who wants to go deeper, who may already have some experience in embodied movement, or whose already playing with using dance and movement as part of their personal development and healing modality, but wants more options, tools, guidance, and inspiration.</p><p>People that are new to embodied dance, that are interested in diving into this level of freedom through movement, exploring authenticity and personal expression.</p>
+  heading: Who is Wisdom Body for?
+  description_html: Wisdom Body is for any woman who wants to go deeper, who may already have some experience in embodied movement, or whose already playing with using dance and movement as part of their personal development and healing modality, but wants more options, tools, guidance, and inspiration.</p><p>Women who are new to embodied dance, that are interested in diving into this level of freedom through movement, exploring authenticity and personal expression.</p>
   background-image: 
     background_image: /uploads/images/manamei-17.jpg
     image_focus: center
@@ -115,13 +115,13 @@ cta:
   description_html: <p>There is something much greater than you or me, or our physical bodies and minds, that exists in the unseen world and is the source of what we call magic, and which is always working to bring us back into alignment with our divine path and purpose - that something is your Wisdom Body.</p><p>This immersion will provide you with the tools & experiences to help you reconnect with your own Wisdom Body and step into your full power.</p>
   button: 
     text: Enroll now
-    url: 
+    url: https://manamei.teachable.com/p/wisdom-body
   background-image: 
     background_image: /uploads/images/manamei-22.jpg
     background-position: center
     overlay_style: medium
 seo: 
-  title: 
+  title: Wisdom Body
   description: 
   keywords: 
   social_image: 
