updated if statement on optin.html to include waitlist

--- a/mentorship-waitlist.html
+++ b/mentorship-waitlist.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 cta: 
-  type: masterclass-reply
+  type: waitlist
   heading_html: Be First to Know When Mentorship Applications Reopen
   subtitle: This program offers a unique blend of classical dance, somatic movement, and expressive dance techniques, tailored to enhance your personal growth, self-expression, and inner balance. By joining our waitlist, you'll be among the first to know when we welcome new applicants. Dive into a practice that nurtures your self-love, sensuality, and authenticity. Be the first to experience the power of movement in unlocking your true potential.
   background:
