--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -11,7 +11,7 @@ description_html: >-
   expressions - finding safety and pleasure in feeling.</li><li>Be supported by
   women all over the world, held in a container of safety and
   permission.</li></ul>
-featured-image: /uploads/images/manamei-15.jpg
+featured-image: /uploads/images/manamei-59.jpg
 heading:
   title: Liberation Through Movement
   subtitle: Membership Tribe
@@ -135,12 +135,12 @@ cta:
     background_image: /uploads/images/manamei-47.jpg
     background-position: center
     overlay_style: medium
-seo:
-  title: Liberation Through Movement
-  description:
-  keywords:
-  social_image:
-  hide-from-google: true
+seo: 
+  title: Liberation Through Movement - A Global Women's Embodiment Tribe
+  description: Join our Liberation Through Movement tribe, a global community for women to explore feminine embodiment through dance and movement. Dive into a journey of self-discovery, empowerment, and connection, guided by Mana Mei. Embrace the transformative power of sisterhood and creative expression.
+  keywords: Liberation Through Movement, feminine embodiment, women's empowerment, dance and movement, global community, Mana Mei, sisterhood, creative expression, self-discovery, embodiment practices
+  social_image: /uploads/images/manamei-59.jpg
+  hide-from-google: false
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
