--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -229,12 +229,12 @@ cta:
     background_image: /uploads/images/manamei-51.jpg
     background-position: center
     overlay_style: medium
-seo:
-  title: Mana Movement Foundations
-  description:
-  keywords:
-  social_image:
-  hide-from-google: true
+seo: 
+  title: Mana Movement Foundations - Realign with the Natural Feminine Way
+  description: Dive into Mana Movement Foundations, a powerful introductory course by Mana Mei focusing on mind-body-spirit harmony through feminine pathways of movement. Explore seated to standing practices that foster creativity, fluidity, and authentic expression.
+  keywords: Mana Movement Foundations, feminine pathways, creative potential, mind-body-spirit harmony, seated to standing movement, Mana Mei course, authentic expression, holistic wellbeing
+  social_image: /uploads/images/manamei-49.jpg
+  hide-from-google: false
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
