--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@ testimonials:
         the power in sisterhood continually helps me to come home to myself. I
         am eternally grateful
       author: Julie De Lorenzo
+seo: 
+  title: Mana Mei - Liberation Through Movement Founder, International Feminine Embodiment Leader
+  description: Discover the transformative power of feminine embodiment with Mana Mei. Explore our unique blend of movement, dance, and somatic practices designed to empower women through self-expression and bodily liberation. Join our global community and awaken your inner strength today.
+  keywords: Mana Mei, feminine embodiment, liberation through movement, somatic dance, empowerment, self-expression, movement founder, international leader, feminine power, personal transformation
+  social_image: /uploads/icons/manamei-11.png
+  hide-from-google: false
 ---
 <!-- Hero Banner -->
 {% include hero-banner-home.html %}
