--- a/mana-movement.html
+++ b/mana-movement.html
@@ -217,12 +217,12 @@ cta:
     background_image: /uploads/images/manamei-53.jpg
     background-position: center
     overlay_style: dark
-seo:
-  title: Mana Movement
-  description:
-  keywords:
-  social_image:
-  hide-from-google: true
+seo: 
+  title: Mana Movement - an initiation into the Art of Feminine Embodiment
+  description: Discover the Mana Movement full course, designed to reconnect women with their innate feminine energy through feminine embodiment. Unleash your creative potential and find peace, clarity, and inspiration through this transformative dance practice.
+  keywords: Mana Movement, feminine energy, intuitive dance, creative potential, movement patterns, circles spirals waves, peace clarity inspiration, dance practice, embodied liberation
+  social_image: /uploads/images/manamei-27.jpg
+  hide-from-google: false
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
