wisdeom body seo

--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -3,7 +3,7 @@ layout: default
 slug: wisdom-body
 title: Wisdom Body
 description_html: 
-featured-image: 
+featured-image: /uploads/images/manamei-14.jpg
 heading: 
   title: Wisdom Body
   subtitle: Online Embodied Movement & Somatic Dance Program
@@ -121,11 +121,11 @@ cta:
     background-position: center
     overlay_style: medium
 seo: 
-  title: Wisdom Body
-  description: 
-  keywords: 
-  social_image: 
-  hide-from-google: true
+  title: Wisdom Body - An Online Embodied Movement & Somatic Dance Program
+  description: Embrace your Wisdom Body with Mana Mei's online immersion. Reconnect with your innate feminine power through embodied movement and somatic dance. Rediscover your inner strength, creativity, and authentic self in a supportive community.
+  keywords: Wisdom Body, embodied movement, somatic dance, feminine power, transformative practices, online program, inner strength, creativity, authentic self
+  social_image: /uploads/images/manamei-14.jpg
+  hide-from-google: false
 ---
 
 <!-- Course Heading -->
